# lesson_20_2

./: .gitignore  blog.html  blog_wrong.py  index.html  index2.html  pyproject.toml  style.css
