[tool.poetry]
name = "lesson-20-2"
version = "0.1.0"
description = ""
authors = ["ViktorShadr <v.viktor.shadrin@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"

[tool.poetry.group.format.dependencies]
black = "^25.9.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

